--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,8 @@ html, body {
   height: 100%;
   padding: 10px;
   box-sizing: border-box;
-  background: yellow;
+  color: white;
+  background: grey;
 }
 
 .content{
@@ -30,7 +31,7 @@ html, body {
 }
 
 body {
-  background: rgb(255, 144, 144)
+  background: rgb(255, 144, 144);
 }
 
 .form-sort-list {
@@ -68,7 +69,7 @@ body {
   height: 100%;
   padding: 5px;
   position: absolute;
-  background: grey;
+  background: rgb(255, 144, 144);
   opacity: 0;
   z-index: -1;
   transition: 0.3s ease;
@@ -83,4 +84,78 @@ body {
 .radio-input:checked + .label-text {
   color: white;
   transition: color 0.3s ease;
+}
+
+#addUsers {
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  margin-top: 20px;
+  transition: 0.3s ease;
+}
+
+#addUsers:hover {
+  transition: 0.3s ease;
+  background: rgb(255, 144, 144);
+  color: white;
+}
+
+.text-input {
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+  padding: 10px;
+}
+
+.mobile-menu {
+  background: white;
+  display: block;
+  height: 3px;
+  width: 25px;
+  position: fixed;
+  top: 20px;
+  right: 15px;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.mobile-menu:after, .mobile-menu:before {
+  content: '';
+  display: block;
+  height: 3px;
+  width: 25px;
+  background: white;
+  position: relative;
+  cursor: pointer;
+}
+
+.mobile-menu:after {
+  top: 3px;
+}
+
+.mobile-menu:before {
+  top: -6px;
+}
+
+@media (max-width: 500px) {
+  .content{ 
+    margin: 0;
+    z-index: 1;
+  }
+  .sidebar {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: -100%;
+    z-index: 2;
+    transition: 0.3s ease;
+  }
+
+  .sidebar.opened {
+    transition: 0.3s ease;
+    left: 0;
+  }
 }
